--- a/options/train_realesrnet_x4plus.yml
+++ b/options/train_realesrnet_x4plus.yml
@@ -35,8 +35,8 @@ datasets:
   train:
     name: DF2K+OST
     type: RealESRGANDataset
-    dataroot_gt: datasets/DF2K
-    meta_info: datasets/DF2K/meta_info/meta_info_DF2Kmultiscale+OST_sub.txt
+    dataroot_gt: datasets/breastcancer
+    meta_info: /content/drive/MyDrive/Real-esrgan/Real-ESRGAN/datasets/breast_cancer/meta_info/meta_info_breastcancer.txt
     io_backend:
       type: disk
 
